--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ img {
     font-size: 1.3rem;
     font-weight: bold;
     color: hsl(218, 44%, 22%);
-    margin-bottom: 1.5rem;
+    margin-bottom: 1em;
     padding: 0 5px;
 }
 
@@ -51,5 +51,5 @@ img {
     font-size: 1rem;
     color: hsl(220, 15%, 55%);
     padding: 0 13px;
-    margin-bottom: 1.5rem;
+    margin-bottom: 1.5em;
 }
