--- a/style.css
+++ b/style.css
@@ -40,10 +40,10 @@ img {
 }
 
 .title {
-    font-size: 1.3rem;
+    font-size: 11px;
     font-weight: bold;
     color: hsl(218, 44%, 22%);
-    margin-bottom: 1em;
+    margin-bottom: 1.7em;
     padding: 0 5px;
 }
 
